--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
         "lint": "eslint resources/js --ext .js,.ts,.vue --ignore-path .gitignore --fix"
     },
     "devDependencies": {
+        "@dbetka/vue-material-icons": "^1.0.5",
         "@inertiajs/vue3": "^1.0.0",
         "@rushstack/eslint-patch": "^1.8.0",
         "@tailwindcss/forms": "^0.5.3",
@@ -27,5 +28,8 @@
         "vite": "^5.0",
         "vue": "^3.4.0",
         "vue-tsc": "^2.0.24"
+    },
+    "dependencies": {
+        "@mdi/js": "^7.4.47"
     }
 }
